--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
-{% extends 'base.html' %}
-{% include 'headers.html' %}
-
-{% block title%} Home {% endblock %}
-
-{% block body %}
-
-<hr style="height:5px;border-width:0;color:rgb(66, 66, 66);background-color:rgb(66, 66, 66)">
 
 
+<div>
+<h2> Sainath Indupuri</h2>
+
+<h2> UTA ID : 1001856992 </h2>
+
+<h2>Hello World! Lab2 Assignment</h2>
+</div>
 
 
 
-{% endblock %}
+
+
