--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
 
 
 <div>
-<h2> Sainath Indupuri</h2>
+<h2> Lab2 Assignment</h2>
 
-<h2> UTA ID : 1001856992 </h2>
+<h2> Darshan Shanthveer Patil</h2>
 
-<h2>Hello World! Lab2 Assignment</h2>
+<h2>Hello World!</h2>
 </div>
 
 
